5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4075/executions/1643_1055.log
== SUBMITION (2019-04-15 18:05:42) 
-- CODE:
from math import*
a=float(input("velocidade inicial:"))
b=radians(float(input("angulo:")
c=float(input("distancia:")
		  
r=(a**2)*sin(2*b)/9.8
p=c-r
if(abs(p)<0.1):
	print("sim")
else:
	print("nao")
		  

-- EXECUTION TIME:
0.197527
-- ERROR:
  File "/home/codebench/codes/1643/1055/main.py", line 4
    c=float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:08:17) 
-- CODE:
from math import*
a=float(input("velocidade inicial:"))
b=radians(float(input("angulo:"))
c=float(input("distancia:")
		  
r=(a**2)*sin(2*b)/9.8
p=c-r
if(abs(p)<0.1):
	print("sim")
else:
	print("nao")
		  

-- EXECUTION TIME:
0.132044
-- ERROR:
  File "/home/codebench/codes/1643/1055/main.py", line 4
    c=float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:09:01) 
-- CODE:
from math import*
a=float(input("velocidade inicial:"))
b=radians(float(input("angulo:")))
c=float(input("distancia:"))
		  
r=(a**2)*sin(2*b)/9.8

p=c-r
if(abs(p)<0.1):
	print("sim")
else:
	print("nao")
		  

-- EXECUTION TIME:
0.142822
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
